--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
         <button id="simular">Simular</button>
 
         <div id="resultados"></div>
+
+        <!-- Elementos gráficos -->
+        <div class="animacion">
+            <div id="bicicleta" class="bicicleta"></div>
+            <div id="carrito" class="carrito"></div>
+        </div>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
+
