--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         
         <div class="animacion">
             <div class="carretera">
-                <img id="bicicleta" class="bicicleta" src="https://cdn-icons-png.flaticon.com/512/2079/2079741.png" alt="Bicicleta con ciclista">
-                <img id="carro" class="carro" src="https://cdn-icons-png.flaticon.com/512/862/862131.png" alt="Carro emitiendo CO2">
+                <img id="bicicleta" class="bicicleta" src="https://e7.pngegg.com/pngimages/588/475/png-clipart-road-cyclist-silhouette-sports-road-cycling-thumbnail.png" alt="Bicicleta con ciclista">
+                <img id="carro" class="carro" src="https://e7.pngegg.com/pngimages/629/563/png-clipart-car-computer-icons-car-angle-car-thumbnail.png" alt="Carro emitiendo CO2">
             </div>
         </div>
 
