--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <input type="number" id="tiempo_auto" placeholder="Ej. 1">
 
         <button id="simular">Simular</button>
+        <button id="reiniciar">Reiniciar</button>
 
         <div id="resultados"></div>
     </div>
