--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         
         <div class="animacion">
             <div class="carretera">
-                <img id="bicicleta" class="bicicleta" src="https://e7.pngegg.com/pngimages/588/475/png-clipart-road-cyclist-silhouette-sports-road-cycling-thumbnail.png" alt="Bicicleta con ciclista">
-                <img id="carro" class="carro" src="https://e7.pngegg.com/pngimages/629/563/png-clipart-car-computer-icons-car-angle-car-thumbnail.png" alt="Carro emitiendo CO2">
+                <img id="bicicleta" class="bicicleta" src="https://png.pngtree.com/png-clipart/20190705/original/pngtree-cyclists-png-image_4309049.jpg" alt="Bicicleta con ciclista">
+                <img id="carro" class="carro" src="https://e7.pngegg.com/pngimages/64/222/png-clipart-car-transport-cartoon-car-child-vehicle-thumbnail.png" alt="Carro emitiendo CO2">
             </div>
         </div>
 
