--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         
         <div class="animacion">
             <div class="carretera">
-                <img id="bicicleta" class="bicicleta" src="images/bicicleta.png" alt="Bicicleta">
-                <img id="carro" class="carro" src="images/carro.png" alt="Carro emitiendo CO2">
+                <img id="bicicleta" class="bicicleta" src="images/bicicleta.png.png" alt="Bicicleta">
+                <img id="carro" class="carro" src="images/carro.png.png" alt="Carro emitiendo CO2">
             </div>
         </div>
 
