--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             </div>
         </div>
 
-        <label for="velocidad_bici">Velocidad de la Bicicleta (km/h):</label>
+        <label for="velocidad_bici"><strong>Velocidad de la Bicicleta (km/h):</strong></label>
         <input type="number" id="velocidad_bici" placeholder="Ej. 20">
 
-        <label for="tiempo_bici">Tiempo en Bicicleta (horas):</label>
+        <label for="tiempo_bici"><strong>Tiempo en Bicicleta (horas):</strong></label>
         <input type="number" id="tiempo_bici" placeholder="Ej. 1">
 
-        <label for="velocidad_auto">Velocidad del Automóvil (km/h):</label>
+        <label for="velocidad_auto"><strong>Velocidad del Automóvil (km/h):</strong></label>
         <input type="number" id="velocidad_auto" placeholder="Ej. 40">
 
-        <label for="tiempo_auto">Tiempo en Automóvil (horas):</label>
+        <label for="tiempo_auto"><strong>Tiempo en Automóvil (horas):</strong></label>
         <input type="number" id="tiempo_auto" placeholder="Ej. 1">
 
         <button id="simular">Simular</button>
