--- a/index.html
+++ b/index.html
@@ -17,22 +17,31 @@
             </div>
         </div>
 
-        <label for="velocidad_auto"><strong>Velocidad del Vehículo (km/h):</strong></label>
-        <input type="number" id="velocidad_auto" placeholder="Ej. 40">
-
-        <label for="tiempo_auto"><strong>Tiempo del Vehículo (horas):</strong></label>
-        <input type="number" id="tiempo_auto" placeholder="Ej. 1">
-
-        <label for="tipo_movimiento"><strong>Tipo de Movimiento:</strong></label>
-        <select id="tipo_movimiento">
-            <option value="mru">MRU</option>
-            <option value="mrua">MRUA</option>
+        <label for="tipo_vehiculo"><strong>Tipo de Vehículo:</strong></label>
+        <select id="tipo_vehiculo">
+            <option value="automovil">Automóvil</option>
+            <option value="suv">SUV</option>
+            <option value="camion">Camión</option>
         </select>
 
-        <div id="mrua_intervals" style="display: none;">
+        <div id="movimiento_options" style="display: none;">
+            <label for="tipo_movimiento"><strong>Tipo de Movimiento:</strong></label>
+            <select id="tipo_movimiento">
+                <option value="mru">MRU</option>
+                <option value="mrua">MRUA</option>
+            </select>
+        </div>
+
+        <div id="mru_data" style="display: none;">
+            <label for="velocidad_auto"><strong>Velocidad del Vehículo (km/h):</strong></label>
+            <input type="number" id="velocidad_auto" placeholder="Ej. 40">
+            <label for="tiempo_auto"><strong>Tiempo del Vehículo (horas):</strong></label>
+            <input type="number" id="tiempo_auto" placeholder="Ej. 1">
+        </div>
+
+        <div id="mrua_data" style="display: none;">
             <label for="num_intervals"><strong>Número de Intervalos:</strong></label>
             <input type="number" id="num_intervals" min="1" placeholder="Ej. 3">
-
             <div id="intervals_container"></div>
         </div>
 
