--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 
         <!-- Datos para MRU -->
         <div id="mru_data" style="display: none;">
-            <label for="velocidad_auto"><strong>Velocidad del Vehículo (km/h):</strong></label>
-            <input type="number" id="velocidad_auto" placeholder="Ej. 40">
-            <label for="tiempo_auto"><strong>Tiempo del Vehículo (horas):</strong></label>
-            <input type="number" id="tiempo_auto" placeholder="Ej. 1">
+            <label for="velocidad_auto"><strong>Velocidad del Vehículo (m/s):</strong></label>
+            <input type="number" id="velocidad_auto" placeholder="Ej. 10">
+            <label for="tiempo_auto"><strong>Tiempo del Vehículo (segundos):</strong></label>
+            <input type="number" id="tiempo_auto" placeholder="Ej. 3600">
+            <label for="distancia_auto"><strong>Distancia (m):</strong></label>
+            <input type="number" id="distancia_auto" placeholder="Ej. 1000">
         </div>
 
         <!-- Datos para MRUA -->
